fixing collapse menu toolbar height

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -162,19 +162,32 @@ p {font-weight: 300;}
 
         .btn {
             &.btn-navbar {
+                background-color: transparent;
+                background-image: none;
                 -webkit-border-radius: 0;
                 border-radius: 0;
                 -webkit-box-shadow: none;
                 box-shadow: none;
                 border: none;
-                margin: 5px;
-                span {
-                    box-shadow: none;
-                    background-color: @color_two;
+                position: relative;
+                height: 25px;
+
+                &:before {
+                    font-family: FontAwesome;
+                    content: '\f107';
+                    position: absolute;
+                    color: @white;
+                    font-size: 17px;
                 }
+
+                span {
+                    display: none;
+                }
+
                 &:hover, &:focus {
                     -webkit-border-radius: 0;
                     border-radius: 0;
+                    background-image: none;
                 }
             }
         }
